--- a/assigment1/latex/bug.tex
+++ b/assigment1/latex/bug.tex
@@ -11,5 +11,8 @@ No known bugs.
 No known bugs.  
 \item[File \mbox{\hyperlink{test3_8c}{test3.c}} ]\label{bug__bug000004}%
 \Hypertarget{bug__bug000004}%
+No known bugs.  
+\item[File \mbox{\hyperlink{test4_8c}{test4.c}} ]\label{bug__bug000005}%
+\Hypertarget{bug__bug000005}%
 No known bugs. 
 \end{DoxyRefList}
