--- a/assigment1/latex/files.tex
+++ b/assigment1/latex/files.tex
@@ -5,4 +5,5 @@ Here is a list of all files with brief descriptions\+:\begin{DoxyCompactList}
 \item\contentsline{section}{\mbox{\hyperlink{test_8c}{test.\+c}} \\*Test.\+c file brief decription }{\pageref{test_8c}}{}
 \item\contentsline{section}{\mbox{\hyperlink{test2_8c}{test2.\+c}} \\*Test2.\+c file brief decription }{\pageref{test2_8c}}{}
 \item\contentsline{section}{\mbox{\hyperlink{test3_8c}{test3.\+c}} \\*Test3.\+c file brief decription }{\pageref{test3_8c}}{}
+\item\contentsline{section}{\mbox{\hyperlink{test4_8c}{test4.\+c}} \\*Test4.\+c file brief decription }{\pageref{test4_8c}}{}
 \end{DoxyCompactList}
