final comment test.c

--- a/assigment1/latex/test4_8c.tex
+++ b/assigment1/latex/test4_8c.tex
@@ -2,7 +2,7 @@
 \label{test4_8c}\index{test4.c@{test4.c}}
 
 
-\mbox{\hyperlink{test4_8c}{test4.\+c}} file brief decription  
+\mbox{\hyperlink{test4_8c}{test4.\+c}} Insert a value when the F\+I\+FO is Full  
 
 
 {\ttfamily \#include $<$stdio.\+h$>$}\newline
@@ -18,9 +18,9 @@ int \mbox{\hyperlink{test4_8c_a840291bc02cba5474a4cb46a9b9566fe}{main}} (void)
 
 
 \doxysubsection{Detailed Description}
-\mbox{\hyperlink{test4_8c}{test4.\+c}} file brief decription 
+\mbox{\hyperlink{test4_8c}{test4.\+c}} Insert a value when the F\+I\+FO is Full 
 
-Follows the detailed description of \mbox{\hyperlink{MY__FIFO_8c}{M\+Y\+\_\+\+F\+I\+F\+O.\+c}}. It is separated from the brief one by a blank line. In this case \mbox{\hyperlink{test_8c}{test.\+c}} is the file that contains the \mbox{\hyperlink{test4_8c_a840291bc02cba5474a4cb46a9b9566fe}{main()}} function.
+In this script we want to know what happens when the F\+I\+FO are already full and we want insert a new element
 
 \begin{DoxyAuthor}{Author}
 Ana Sousa, Frederico Moreira, Pedro Rodrigues 
@@ -43,7 +43,7 @@ Ana Sousa, Frederico Moreira, Pedro Rodrigues
 
 Brief decription of \mbox{\hyperlink{test4_8c_a840291bc02cba5474a4cb46a9b9566fe}{main()}}. 
 
-Here it goes the long description of \mbox{\hyperlink{test4_8c_a840291bc02cba5474a4cb46a9b9566fe}{main()}} main has no input arguments. It then prints the result and returns.
+Let\textquotesingle{}s insert several values until filling the F\+I\+FO and then replace it with the last value inserted
 
 \begin{DoxyReturn}{Returns}
 \mbox{\hyperlink{test4_8c_a840291bc02cba5474a4cb46a9b9566fe}{main()}} always returns 0 
