--- a/assigment1/latex/MY__FIFO_8h.tex
+++ b/assigment1/latex/MY__FIFO_8h.tex
@@ -84,8 +84,30 @@ Insert an element in the F\+I\+FO.
 
 Esta função adiciona um determinado elemento inserido pelo utilizador na posição certa do F\+I\+FO. Tem assim como argumento o elemento a adicionar ao fifo e não retorna nada 
 \begin{DoxyCode}{0}
-\DoxyCodeLine{res = function1(param1, param2);}
-\DoxyCodeLine{printf(\textcolor{stringliteral}{"res=\%d\(\backslash\)n"},res);}
+\DoxyCodeLine{   \textcolor{keywordtype}{void} \mbox{\hyperlink{MY__FIFO_8c_aa3f433abcfc07db50a1aa515582887dd}{MyFIFOInsert}}(\textcolor{keywordtype}{int} add)}
+\DoxyCodeLine{\{   }
+\DoxyCodeLine{    \textcolor{keywordflow}{if} (flag==0)\{}
+\DoxyCodeLine{}
+\DoxyCodeLine{        fifo\_array[head \% size\_T] = add;}
+\DoxyCodeLine{        head++;}
+\DoxyCodeLine{        flag=1;}
+\DoxyCodeLine{    \}}
+\DoxyCodeLine{    \textcolor{keywordflow}{else}\{}
+\DoxyCodeLine{}
+\DoxyCodeLine{        \textcolor{keywordflow}{if} ((head \% size\_T) == (tail \% size\_T) )\{}
+\DoxyCodeLine{            printf(\textcolor{stringliteral}{"the oldest element are removed and inserted a new value\(\backslash\)n"});}
+\DoxyCodeLine{            fifo\_array[head \% size\_T] = add;}
+\DoxyCodeLine{            head++;}
+\DoxyCodeLine{            tail++;}
+\DoxyCodeLine{        \}}
+\DoxyCodeLine{        \textcolor{keywordflow}{else}\{}
+\DoxyCodeLine{            fifo\_array[head \% size\_T] = add;}
+\DoxyCodeLine{            head++;}
+\DoxyCodeLine{        \}  }
+\DoxyCodeLine{    \}}
+\DoxyCodeLine{    }
+\DoxyCodeLine{    }
+\DoxyCodeLine{\}}
 \end{DoxyCode}
  
 \begin{DoxyParams}{Parameters}
@@ -107,8 +129,14 @@ Apenas ver o elemento mais antigo do F\+I\+FO.
 
 
 \begin{DoxyCode}{0}
-\DoxyCodeLine{res = function1(param1, param2);}
-\DoxyCodeLine{printf(\textcolor{stringliteral}{"res=\%d\(\backslash\)n"},res);}
+\DoxyCodeLine{\textcolor{keywordtype}{int} \mbox{\hyperlink{MY__FIFO_8c_a81c9e4185df8897dd691b1c201a3a955}{MyFIFOPeep}}(\textcolor{keywordtype}{void})}
+\DoxyCodeLine{\{}
+\DoxyCodeLine{    \textcolor{keywordtype}{int} num;}
+\DoxyCodeLine{}
+\DoxyCodeLine{    num = fifo\_array[tail \% size\_T];}
+\DoxyCodeLine{    \textcolor{comment}{//printf("O elemento mais antigo é \%d",num);}}
+\DoxyCodeLine{    \textcolor{keywordflow}{return} num;}
+\DoxyCodeLine{\}}
 \end{DoxyCode}
  
 \begin{DoxyParams}{Parameters}
@@ -130,8 +158,22 @@ remover o ultimo elemento inserido. Esta função remove o elemento mais antigo 
 
 
 \begin{DoxyCode}{0}
-\DoxyCodeLine{res = function1(param1, param2);}
-\DoxyCodeLine{printf(\textcolor{stringliteral}{"res=\%d\(\backslash\)n"},res);}
+\DoxyCodeLine{   \textcolor{keywordtype}{int} \mbox{\hyperlink{MY__FIFO_8c_a6924a70e7f8335133db957b5dbcfe0ce}{MyFIFORemove}}(\textcolor{keywordtype}{void})}
+\DoxyCodeLine{\{}
+\DoxyCodeLine{    \textcolor{keywordtype}{int} const1=0;}
+\DoxyCodeLine{    \textcolor{keywordflow}{if} (tail == head)}
+\DoxyCodeLine{    \{   printf(\textcolor{stringliteral}{"O FIFO está vazio\(\backslash\)n"});}
+\DoxyCodeLine{        \textcolor{keywordflow}{return} -\/1;}
+\DoxyCodeLine{        }
+\DoxyCodeLine{    \}}
+\DoxyCodeLine{}
+\DoxyCodeLine{    \textcolor{keywordflow}{else}}
+\DoxyCodeLine{    \{   const1= fifo\_array[tail \% size\_T];}
+\DoxyCodeLine{        fifo\_array[tail \% size\_T] = 0;}
+\DoxyCodeLine{        tail++;}
+\DoxyCodeLine{        \textcolor{keywordflow}{return} const1;}
+\DoxyCodeLine{    \}}
+\DoxyCodeLine{\}}
 \end{DoxyCode}
  
 \begin{DoxyParams}{Parameters}
@@ -153,8 +195,13 @@ numero total de elemntos Esta função devovlve o numero total de elentos que o 
 
 
 \begin{DoxyCode}{0}
-\DoxyCodeLine{res = function1(param1, param2);}
-\DoxyCodeLine{printf(\textcolor{stringliteral}{"res=\%d\(\backslash\)n"},res);}
+\DoxyCodeLine{ *\textcolor{keywordtype}{int} \mbox{\hyperlink{MY__FIFO_8c_a306ac4924fca6f5dc13bd09c5fda298b}{MyFIFOSize}}(\textcolor{keywordtype}{void})}
+\DoxyCodeLine{\{}
+\DoxyCodeLine{    \textcolor{keywordtype}{int} size;}
+\DoxyCodeLine{    size = head -\/ tail;}
+\DoxyCodeLine{    \textcolor{comment}{//printf("FIFO Size:  \%d", size);}}
+\DoxyCodeLine{    \textcolor{keywordflow}{return} size;}
+\DoxyCodeLine{\}}
 \end{DoxyCode}
  
 \begin{DoxyParams}{Parameters}
