final comment1 test.c

--- a/assigment1/latex/files.tex
+++ b/assigment1/latex/files.tex
@@ -2,7 +2,7 @@
 Here is a list of all files with brief descriptions\+:\begin{DoxyCompactList}
 \item\contentsline{section}{\mbox{\hyperlink{MY__FIFO_8c}{M\+Y\+\_\+\+F\+I\+F\+O.\+c}} }{\pageref{MY__FIFO_8c}}{}
 \item\contentsline{section}{\mbox{\hyperlink{MY__FIFO_8h}{M\+Y\+\_\+\+F\+I\+F\+O.\+h}} \\*F\+I\+FO means First In First Out }{\pageref{MY__FIFO_8h}}{}
-\item\contentsline{section}{\mbox{\hyperlink{test_8c}{test.\+c}} \\*Test.\+c file brief decription }{\pageref{test_8c}}{}
+\item\contentsline{section}{\mbox{\hyperlink{test_8c}{test.\+c}} \\*Test.\+c file user interface\+: In this script we can create a F\+I\+FO with variable size and interact with it }{\pageref{test_8c}}{}
 \item\contentsline{section}{\mbox{\hyperlink{test2_8c}{test2.\+c}} \\*Test2.\+c file brief decription }{\pageref{test2_8c}}{}
 \item\contentsline{section}{\mbox{\hyperlink{test3_8c}{test3.\+c}} \\*Test3.\+c file brief decription }{\pageref{test3_8c}}{}
 \item\contentsline{section}{\mbox{\hyperlink{test4_8c}{test4.\+c}} \\*Test4.\+c Insert a value when the F\+I\+FO is Full }{\pageref{test4_8c}}{}
