--- a/assigment1/latex/test_8c.tex
+++ b/assigment1/latex/test_8c.tex
@@ -2,7 +2,7 @@
 \label{test_8c}\index{test.c@{test.c}}
 
 
-\mbox{\hyperlink{test_8c}{test.\+c}} file brief decription  
+\mbox{\hyperlink{test_8c}{test.\+c}} file user interface\+: In this script we can create a F\+I\+FO with variable size and interact with it  
 
 
 {\ttfamily \#include $<$stdio.\+h$>$}\newline
@@ -18,9 +18,7 @@ int \mbox{\hyperlink{test_8c_a840291bc02cba5474a4cb46a9b9566fe}{main}} (void)
 
 
 \doxysubsection{Detailed Description}
-\mbox{\hyperlink{test_8c}{test.\+c}} file brief decription 
-
-Follows the detailed description of \mbox{\hyperlink{MY__FIFO_8c}{M\+Y\+\_\+\+F\+I\+F\+O.\+c}}. It is separated from the brief one by a blank line. In this case \mbox{\hyperlink{test_8c}{test.\+c}} is the file that contains the \mbox{\hyperlink{test_8c_a840291bc02cba5474a4cb46a9b9566fe}{main()}} function.
+\mbox{\hyperlink{test_8c}{test.\+c}} file user interface\+: In this script we can create a F\+I\+FO with variable size and interact with it 
 
 \begin{DoxyAuthor}{Author}
 Ana Sousa, Frederico Moreira, Pedro Rodrigues 
@@ -43,7 +41,15 @@ Ana Sousa, Frederico Moreira, Pedro Rodrigues
 
 Brief decription of \mbox{\hyperlink{test_8c_a840291bc02cba5474a4cb46a9b9566fe}{main()}}. 
 
-Here it goes the long description of \mbox{\hyperlink{test_8c_a840291bc02cba5474a4cb46a9b9566fe}{main()}} main has no input arguments. It then prints the result and returns.
+Main has no input arguments. The main has an infinite loop that you can create and interact with a F\+I\+FO in particular\+:
+
+-\/insert elements
+
+-\/remove elements
+
+-\/peep the oldest element present in the F\+I\+FO
+
+-\/know the size of the F\+I\+FO
 
 \begin{DoxyReturn}{Returns}
 \mbox{\hyperlink{test_8c_a840291bc02cba5474a4cb46a9b9566fe}{main()}} always returns 0 
