--- a/assigment3/maquina_vendas/src/latex/bug.tex
+++ b/assigment3/maquina_vendas/src/latex/bug.tex
@@ -1,6 +1,6 @@
 
 \begin{DoxyRefList}
-\item[File \mbox{\hyperlink{main_8c}{main.c}} ]\label{bug__bug000001}%
+\item[File \mbox{\hyperlink{vending__machine_8h}{vending\+\_\+machine.h}} ]\label{bug__bug000001}%
 \Hypertarget{bug__bug000001}%
-No known bugs. 
+No known bugs.
 \end{DoxyRefList}
