--- a/Assigment_4/Assigment_4_fifo/src/latex/fifo_8h.tex
+++ b/Assigment_4/Assigment_4_fifo/src/latex/fifo_8h.tex
@@ -15,7 +15,7 @@ void \mbox{\hyperlink{fifo_8h_a61675a61bbec86901b2fe28f008e881c}{thread\+\_\+\+A
 void \mbox{\hyperlink{fifo_8h_a99cef2c8673e9c73162dd97f0247ca8e}{thread\+\_\+\+B\+\_\+code}} (void $\ast$argA, void $\ast$argB, void $\ast$argC)
 \begin{DoxyCompactList}\small\item\em calculates the average of 10 values read from the adc and if the value is outside 10\% it is rejected. \end{DoxyCompactList}\item 
 void \mbox{\hyperlink{fifo_8h_a6eec62f04743b40b6d744ecd2f31cdd2}{thread\+\_\+\+C\+\_\+code}} (void $\ast$argA, void $\ast$argB, void $\ast$argC)
-\begin{DoxyCompactList}\small\item\em Sets the P\+WM DC value to the average of the samples got from A\+DC module in thread A$\ast$. \end{DoxyCompactList}\end{DoxyCompactItemize}
+\begin{DoxyCompactList}\small\item\em Sets the P\+WM DC value to the average of the samples got from A\+DC module in thread B. \end{DoxyCompactList}\end{DoxyCompactItemize}
 
 
 \doxysubsection{Detailed Description}
@@ -154,21 +154,7 @@ Read the adc value and save it.
 No returns ~\newline
  
 \end{DoxyReturn}
-A\+DC setup\+: bind and initialize
-
-Gets one sample and checks for errors
-
-A\+DC is set to use gain of 1/4 and reference V\+D\+D/4, so input range is \mbox{[}0...V\+D\+D\+\_\+3V\mbox{]}, with 10 bit resolution
-
-Global variable ab will assume values between \mbox{[}0, 1023\mbox{]}
-
-A\+DC setup\+: bind and initialize
-
-Gets one sample and checks for errors
-
-A\+DC is set to use gain of 1/4 and reference V\+D\+D/4, so input range is \mbox{[}0...V\+D\+D\+\_\+3V\mbox{]}, with 10 bit resolution
-
-Global variable ab will assume values between \mbox{[}0, 1023\mbox{]}\mbox{\Hypertarget{fifo_8h_a99cef2c8673e9c73162dd97f0247ca8e}\label{fifo_8h_a99cef2c8673e9c73162dd97f0247ca8e}} 
+\mbox{\Hypertarget{fifo_8h_a99cef2c8673e9c73162dd97f0247ca8e}\label{fifo_8h_a99cef2c8673e9c73162dd97f0247ca8e}} 
 \index{fifo.h@{fifo.h}!thread\_B\_code@{thread\_B\_code}}
 \index{thread\_B\_code@{thread\_B\_code}!fifo.h@{fifo.h}}
 \doxysubsubsection{\texorpdfstring{thread\_B\_code()}{thread\_B\_code()}}
@@ -241,9 +227,7 @@ calculates the average of 10 values read from the adc and if the value is outsid
 \begin{DoxyReturn}{Returns}
 No returns 
 \end{DoxyReturn}
-Choose the values that are not acording to the average
-
-Choose the values that are not acording to the average\mbox{\Hypertarget{fifo_8h_a6eec62f04743b40b6d744ecd2f31cdd2}\label{fifo_8h_a6eec62f04743b40b6d744ecd2f31cdd2}} 
+\mbox{\Hypertarget{fifo_8h_a6eec62f04743b40b6d744ecd2f31cdd2}\label{fifo_8h_a6eec62f04743b40b6d744ecd2f31cdd2}} 
 \index{fifo.h@{fifo.h}!thread\_C\_code@{thread\_C\_code}}
 \index{thread\_C\_code@{thread\_C\_code}!fifo.h@{fifo.h}}
 \doxysubsubsection{\texorpdfstring{thread\_C\_code()}{thread\_C\_code()}}
@@ -251,7 +235,7 @@ Choose the values that are not acording to the average\mbox{\Hypertarget{fifo_8h
 
 
 
-Sets the P\+WM DC value to the average of the samples got from A\+DC module in thread A$\ast$. 
+Sets the P\+WM DC value to the average of the samples got from A\+DC module in thread B. 
 
 
 \begin{DoxyCode}{0}
@@ -309,30 +293,3 @@ Sets the P\+WM DC value to the average of the samples got from A\+DC module in t
 \begin{DoxyReturn}{Returns}
 No returns 
 \end{DoxyReturn}
-Pointer to G\+P\+IO device structure
-
-Pointer to P\+WM device structure
-
-Generic return value variable
-
-P\+WM period in us
-
-Bind to G\+P\+IO 0 and P\+W\+M0
-
-Sets the P\+WM DC value to the average of the samples got from A\+DC module in thread A
-
-Prints dutty-\/cycle
-
-Pointer to G\+P\+IO device structure
-
-Pointer to P\+WM device structure
-
-Generic return value variable
-
-P\+WM period in us
-
-Bind to G\+P\+IO 0 and P\+W\+M0
-
-Sets the P\+WM DC value to the average of the samples got from A\+DC module in thread A
-
-Prints dutty-\/cycle
