--- a/Assigment_4/Assigment_4_fifo/src/latex/refman.tex
+++ b/Assigment_4/Assigment_4_fifo/src/latex/refman.tex
@@ -182,6 +182,7 @@
 \chapter{Data Structure Documentation}
 \input{structdata__item__t}
 \chapter{File Documentation}
+\input{CMakeLists_8txt}
 \input{fifo_8h}
 \input{main_8c}
 %--- End generated contents ---
