--- a/Assigment_4/Assigment_4/src/latex/semaphore_8h.tex
+++ b/Assigment_4/Assigment_4/src/latex/semaphore_8h.tex
@@ -2,7 +2,7 @@
 \label{semaphore_8h}\index{semaphore.h@{semaphore.h}}
 
 
-The system to implement does a basic processing of an analog signal. It reads the input voltage from an analog sensor, digitally filters the signal and outputs it.  
+The system to implement does a basic processing of an analog signal. It reads the input voltage from an analog sensor, digitally filters the signal and outputs it using a semaphore.  
 
 
 \doxysubsection*{Functions}
@@ -19,7 +19,7 @@ void \mbox{\hyperlink{semaphore_8h_a6eec62f04743b40b6d744ecd2f31cdd2}{thread\+\_
 
 
 \doxysubsection{Detailed Description}
-The system to implement does a basic processing of an analog signal. It reads the input voltage from an analog sensor, digitally filters the signal and outputs it. 
+The system to implement does a basic processing of an analog signal. It reads the input voltage from an analog sensor, digitally filters the signal and outputs it using a semaphore. 
 
 Contains the functions needed to process the analog signal \begin{DoxyAuthor}{Author}
 Frederico Moreira, Ana Sousa, Pedro Rodrigues 
