--- a/Assigment_4/Assigment_4/src/latex/semaphore_8h.tex
+++ b/Assigment_4/Assigment_4/src/latex/semaphore_8h.tex
@@ -11,11 +11,11 @@ The system to implement does a basic processing of an analog signal. It reads th
 void \mbox{\hyperlink{semaphore_8h_a6288eba0f8e8ad3ab1544ad731eb7667}{main}} (void)
 \begin{DoxyCompactList}\small\item\em Main funtion\+: Initialize semaphores. \end{DoxyCompactList}\item 
 void \mbox{\hyperlink{semaphore_8h_a61675a61bbec86901b2fe28f008e881c}{thread\+\_\+\+A\+\_\+code}} (void $\ast$argA, void $\ast$argB, void $\ast$argC)
-\begin{DoxyCompactList}\small\item\em Read the adc value and save it. \end{DoxyCompactList}\item 
+\begin{DoxyCompactList}\small\item\em ê o valor da A\+D\+Ce guarda numa variável global (shared memory between tasks A/B) no nosso Código denominada por “ab” e no final faz give do semáforo AB. \end{DoxyCompactList}\item 
 void \mbox{\hyperlink{semaphore_8h_a99cef2c8673e9c73162dd97f0247ca8e}{thread\+\_\+\+B\+\_\+code}} (void $\ast$argA, void $\ast$argB, void $\ast$argC)
-\begin{DoxyCompactList}\small\item\em calculates the average of 10 values read from the adc and if the value is outside 10\% it is rejected. \end{DoxyCompactList}\item 
+\begin{DoxyCompactList}\small\item\em é feito o take do semáforo AB é realizado uma média das últimas 10 amostras calculadas na thread A e é feito um filtro rejeitando todos os valores que estejam abaixo ou acima de 10\% da média, sendo que este output é colocado numa variável global (shared memory between tasks B/C) no nosso Código denominada por “cb” e no final faz give do semáforo BC. \end{DoxyCompactList}\item 
 void \mbox{\hyperlink{semaphore_8h_a6eec62f04743b40b6d744ecd2f31cdd2}{thread\+\_\+\+C\+\_\+code}} (void $\ast$argA, void $\ast$argB, void $\ast$argC)
-\begin{DoxyCompactList}\small\item\em Sets the P\+WM DC value to the average of the samples got from A\+DC module in thread A$\ast$. \end{DoxyCompactList}\end{DoxyCompactItemize}
+\begin{DoxyCompactList}\small\item\em é feito o take do semáforo BC e é criado um pwm signal que é depois aplicado a um led. Todo este processo é repetido período após período. \end{DoxyCompactList}\end{DoxyCompactItemize}
 
 
 \doxysubsection{Detailed Description}
@@ -82,7 +82,7 @@ Main function \mbox{\Hypertarget{semaphore_8h_a61675a61bbec86901b2fe28f008e881c}
 
 
 
-Read the adc value and save it. 
+ê o valor da A\+D\+Ce guarda numa variável global (shared memory between tasks A/B) no nosso Código denominada por “ab” e no final faz give do semáforo AB. 
 
 
 \begin{DoxyCode}{0}
@@ -154,7 +154,7 @@ Thread code prototypes \mbox{\Hypertarget{semaphore_8h_a99cef2c8673e9c73162dd97f
 
 
 
-calculates the average of 10 values read from the adc and if the value is outside 10\% it is rejected. 
+é feito o take do semáforo AB é realizado uma média das últimas 10 amostras calculadas na thread A e é feito um filtro rejeitando todos os valores que estejam abaixo ou acima de 10\% da média, sendo que este output é colocado numa variável global (shared memory between tasks B/C) no nosso Código denominada por “cb” e no final faz give do semáforo BC. 
 
 
 \begin{DoxyCode}{0}
@@ -227,7 +227,7 @@ No returns
 
 
 
-Sets the P\+WM DC value to the average of the samples got from A\+DC module in thread A$\ast$. 
+é feito o take do semáforo BC e é criado um pwm signal que é depois aplicado a um led. Todo este processo é repetido período após período. 
 
 
 \begin{DoxyCode}{0}
